--- a/WebApiCourses/Properties/launchSettings.json
+++ b/WebApiCourses/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7170;http://localhost:5235",
+      "applicationUrl": "https://localhost:7170",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
