--- a/WebApiCourses/WebApiCourses.csproj
+++ b/WebApiCourses/WebApiCourses.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,6 +7,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="react-app\.gitignore" />
+    <Content Include="react-app\public\favicon.ico" />
+    <Content Include="react-app\public\index.html" />
+    <Content Include="react-app\public\logo192.png" />
+    <Content Include="react-app\public\logo512.png" />
+    <Content Include="react-app\public\robots.txt" />
+    <Content Include="react-app\README.md" />
+    <Content Include="react-app\src\App.css" />
+    <Content Include="react-app\src\App.js" />
+    <Content Include="react-app\src\App.test.js" />
+    <Content Include="react-app\src\index.css" />
+    <Content Include="react-app\src\index.js" />
+    <Content Include="react-app\src\logo.svg" />
+    <Content Include="react-app\src\reportWebVitals.js" />
+    <Content Include="react-app\src\setupTests.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
@@ -15,6 +34,24 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="vue" Version="2.6.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\favicon.ico" />
+    <None Include="wwwroot\index.html" />
+    <None Include="wwwroot\logo192.png" />
+    <None Include="wwwroot\logo512.png" />
+    <None Include="wwwroot\robots.txt" />
+    <None Include="wwwroot\static\css\main.e6c13ad2.css" />
+    <None Include="wwwroot\static\css\main.e6c13ad2.css.map" />
+    <None Include="wwwroot\static\js\main.376119f0.js" />
+    <None Include="wwwroot\static\js\main.376119f0.js.LICENSE.txt" />
+    <None Include="wwwroot\static\js\main.376119f0.js.map" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="react-app\build\" />
   </ItemGroup>
 
 </Project>
